modules/nsg/main.tf
#Azure Network Security Group (NSG) Configuration
resource "azurerm_network_security_group" "nsg" {
    name                = var.name
    location            = var.location
    resource_group_name = var.resource_group_name
    security_rule {
      name                       = "SSH"
      priority                   = 1001
      direction                  = "Inbound"
      access                     = "Allow"
      protocol                   = "Tcp"
      source_port_range          = "*"
      destination_port_range     = "22"
      source_address_prefix      = "*"
      destination_address_prefix = "*"
    }
    security_rule {
      name                       = "HTTP"
      priority                   = 1002
      direction                  = "Inbound"
      access                     = "Allow"
      protocol                   = "Tcp"
      source_port_range          = "*"
      destination_port_range     = "80"
      source_address_prefix      = "*"
      destination_address_prefix = "*"
    }
lifecycle {
      create_before_destroy = true
    }
  }
